added RFE526 - 90 degrees view rotation commands
+ added viewRotateLeft() and viewRotateRight() py methods to View3D
+ added ViewRotateLeft and ViewRotateRight FreeCAD commands
+ added them in View->Standard Views and Context->Standard Views menus

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -68,6 +68,8 @@
         <file>view-zoom-fit.svg</file>
         <file>view-zoom-in.svg</file>
         <file>view-zoom-out.svg</file>
+        <file>view-rotate-left.svg</file>
+        <file>view-rotate-right.svg</file>
         <file>view-measurement.svg</file>
         <file>view-zoom-selection.svg</file>
         <file>Tree_Annotation.svg</file>
