--- a/src/Mod/Arch/Resources/ui/archprefs-base.ui
+++ b/src/Mod/Arch/Resources/ui/archprefs-base.ui
@@ -142,9 +142,21 @@ p, li { white-space: pre-wrap; }
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
-         <widget class="QLabel" name="label_4">
+         <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox_2">
+          <property name="toolTip">
+           <string>if this is checked, the internal Arch IFC parser will be use to build Arch objects from known IFC types.</string>
+          </property>
           <property name="text">
-           <string>IFC Schema file location</string>
+           <string>use internal IFC parser</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>useIfcParser</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Arch</cstring>
           </property>
          </widget>
         </item>
@@ -160,6 +172,13 @@ p, li { white-space: pre-wrap; }
            </size>
           </property>
          </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>IFC Schema file location</string>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="Gui::PrefFileChooser" name="gui::preffilechooser">
@@ -181,52 +200,13 @@ p, li { white-space: pre-wrap; }
         <item>
          <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox">
           <property name="toolTip">
-           <string>If this is checked, ifcopenshell will be used to create meshes instead of Arch objects</string>
+           <string>If this is checked, the IFCOpenShell importer will be used for objects not handled by the internal parser</string>
           </property>
           <property name="text">
-           <string>Use IfcOpenShell</string>
+           <string>Use IFCOpenShell</string>
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>useIfcOpenShell</cstring>
-          </property>
-          <property name="prefPath" stdset="0">
-           <cstring>Mod/Arch</cstring>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer_4">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QLabel" name="label_5">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>Path to IfcOpenShell</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="Gui::PrefFileChooser" name="gui::preffilechooser_2">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="toolTip">
-           <string>If you have ifcopenshell installed, specify here the path to IfcImport.py</string>
-          </property>
-          <property name="prefEntry" stdset="0">
-           <cstring>ifcopenshell</cstring>
           </property>
           <property name="prefPath" stdset="0">
            <cstring>Mod/Arch</cstring>
@@ -283,38 +263,5 @@ p, li { white-space: pre-wrap; }
   </customwidget>
  </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>gui::prefcheckbox</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>label_5</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>79</x>
-     <y>191</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>376</x>
-     <y>192</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>gui::prefcheckbox</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>gui::preffilechooser_2</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>61</x>
-     <y>191</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>465</x>
-     <y>201</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
