0000579: Installer Raytracer Typo
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5421 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/WindowsInstaller/FreeCAD.wxs
+++ b/src/WindowsInstaller/FreeCAD.wxs
@@ -163,7 +163,7 @@
             <Feature Id="FeatModImage" Title="The Image module" Description="Module to handle pictures" Level="1">
                 <ComponentRef Id="CompModImage" />
             </Feature>
-            <Feature Id="FeatModRaytracing" Title="The Raytracing module" Description="Module to work with the Populat PovRay raytracer. (Experimental)" Level="1">
+            <Feature Id="FeatModRaytracing" Title="The Raytracing module" Description="Module to work with the popular PovRay raytracer. (Experimental)" Level="1">
                 <ComponentRef Id="CompModRaytracing" />
             </Feature>
 
