Updated examples loader in order to allow load s60 katamaran version.

--- a/src/Mod/Ship/shipLoadExample/TaskPanel.ui
+++ b/src/Mod/Ship/shipLoadExample/TaskPanel.ui
@@ -84,6 +84,11 @@
              <string>Barehull 5145</string>
             </property>
            </item>
+           <item>
+            <property name="text">
+             <string>Serie 60 (Katamaran)</string>
+            </property>
+           </item>
           </widget>
          </item>
          <item>
