export SVG as either 'Translated' or 'Raw'
There are two things a user might want when exporting to SVG:

    1. A pretty picture, to put on paper or on the screen and show
       to humans.

    2. An accurate representation of their part, for feeding to CAM
       software.

This commit adds a mechanism that lets the user select which of those
two options they want.

A new choice is added to the Draft Preferences.  The two options are:

    * "Translated (for print and display)", which acts just like before.
      The sketch is translated so it fits neatly in the display area.
      of the cartesian plane.  This is usually what you want if you're
      going to display the SVG to humans.

    * "Raw (for CAM)", which does not translate the sketch at all.
      All sketch coordinates are preserved exactly.  This is useful for
      feeding the SVG to a CAM program (like PyCAM).

The SVG export function is modified to check this new Preference setting,
and write either "Translated" or "Raw" SVGs as appropriate.

--- a/src/Mod/Draft/Resources/ui/userprefs-import.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-import.ui
@@ -356,6 +356,43 @@ If color mapping is choosed, you must choose a color mapping file containing a t
         </item>
        </layout>
       </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Export Style</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="Gui::PrefComboBox" name="svg_export_style_combobox">
+          <property name="toolTip">
+           <string>Style of SVG file to write when exporting a Sketch.</string>
+          </property>
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>svg_export_style</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Draft</cstring>
+          </property>
+          <item>
+           <property name="text">
+            <string>Translated (for print &amp; display)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Raw (for CAM)</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </widget>
    </item>
