Added Std_Edit FreeCAD command
That command (located in the Edit menu) toggles (enters or leaves)
the Edit mode of a selected object.

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -45,6 +45,7 @@
         <file>edit-select-all.svg</file>
         <file>edit-redo.svg</file>
         <file>edit-undo.svg</file>
+        <file>edit-edit.svg</file>
         <file>help-browser.svg</file>
         <file>preferences-system.svg</file>
         <file>window-new.svg</file>
