--- a/src/WindowsInstaller/FreeCADData.wxs
+++ b/src/WindowsInstaller/FreeCADData.wxs
@@ -41,52 +41,60 @@
 					<File Id="ExampleFile4" Name="Schenkel.stp"   />
 				</Component>
 			</Directory>
-			<!-- Robot resource files  -->
-			<Directory Id="ModRobotLib" Name="Lib" FileSource="../../data/Mod/Robot/Lib" >
-				<Directory Id="ModRobotLibKuka" Name="Kuka" FileSource="../../data/Mod/Robot/Lib/Kuka" >
-					<Component Id="CompModRobotLibKuka"  Guid="753d2cc0-02af-11df-8a39-0800200c9a66" Win64='$(var.Win_64)' KeyPath="yes">
-						<File Id="Kuka1" Name="kr16.wrl"   />
-						<File Id="Kuka2" Name="kr210.WRL"   />
-						<File Id="Kuka3" Name="kr500_1.csv"   />
-						<File Id="Kuka4" Name="kr500_1.wrl"   />
-						<File Id="Kuka5" Name="kr_16.csv"   />
-						<File Id="Kuka6" Name="kr_210_2.csv"   />
-						<File Id="Kuka7" Name="kr_125.csv"   />
-						<File Id="Kuka8" Name="kr125_3.wrl"   />
-					</Component>
+			<Directory Id="DataMod" Name="Mod" FileSource="../../data/Mod" >
+				<!-- Robot resource files  -->
+				<Directory Id="DataModRobot" Name="Robot" FileSource="../../data/Mod/Robot" >
+					<Directory Id="ModRobotLib" Name="Lib" FileSource="../../data/Mod/Robot/Lib" >
+						<Directory Id="ModRobotLibKuka" Name="Kuka" FileSource="../../data/Mod/Robot/Lib/Kuka" >
+							<Component Id="CompModRobotLibKuka"  Guid="753d2cc0-02af-11df-8a39-0800200c9a66" Win64='$(var.Win_64)' KeyPath="yes">
+								<File Id="Kuka1" Name="kr16.wrl"   />
+								<File Id="Kuka2" Name="kr210.WRL"   />
+								<File Id="Kuka3" Name="kr500_1.csv"   />
+								<File Id="Kuka4" Name="kr500_1.wrl"   />
+								<File Id="Kuka5" Name="kr_16.csv"   />
+								<File Id="Kuka6" Name="kr_210_2.csv"   />
+								<File Id="Kuka7" Name="kr_125.csv"   />
+								<File Id="Kuka8" Name="kr125_3.wrl"   />
+							</Component>
+						</Directory>
+					</Directory>
 				</Directory>
-			</Directory>
-			<!-- Drawing resource files  -->
-			<Directory Id="ModDrawingTemplates" Name="Templates" FileSource="../../data/Mod/Drawing/Templates">
-				<Component Id="CompModDrawingTemplates" Guid="f879f473-3a2a-4808-8fa0-021b4a7db30b" Win64='$(var.Win_64)' KeyPath="yes">
-					<File Id="DrawingTemplateA3" Name="A3_Landscape.svg"  />
-				</Component>
-			</Directory>
-			<!-- StartPage resource files  -->
-			<Directory Id="ModStartDataStartPage" Name="StartPageData" FileSource="../../data/Mod/Start/StartPage" >
-				<Component Id="CompModStartDataStartPage"  Guid="aa63eb2a-9355-4d6e-872c-e2fdf9c697da" Win64='$(var.Win_64)' KeyPath="yes">
-					<File Id="StartPage2" Name="PartDesign.py"   />
-					<File Id="StartPage3" Name="Mesh.py"   />
-					<File Id="StartPage4" Name="LoadSchenkel.py"   />
-					<File Id="StartPage5" Name="LoadRobotExample.py"   />
-					<File Id="StartPage6" Name="LoadPartDesignExample.py"   />
-					<File Id="StartPage7" Name="LoadDrawingExample.py"   />
-					<!--<File Id="StartPage8" Name="Banner.jpeg"   />-->
-					<File Id="StartPage9" Name="Background.jpg"   />
-					<File Id="StartPage10" Name="Complete.png"   />
-					<File Id="StartPage11" Name="FreeCAD.png"   />
-					<File Id="StartPage12" Name="Mesh.png"   />
-					<File Id="StartPage13" Name="PartDesign.png"   />
-					<File Id="StartPage14" Name="PartDesignExample.png"   />
-					<File Id="StartPage15" Name="web.png"   />
-					<File Id="StartPage17" Name="ArchDesign.png"   />
-					<File Id="StartPage18" Name="ArchDesign.py"   />
-					<File Id="StartPage19" Name="DefaultWorkbench.py"   />
-					<File Id="StartPage20" Name="LoadMRU0.py"   />
-					<File Id="StartPage21" Name="LoadMRU1.py"   />
-					<File Id="StartPage22" Name="LoadMRU2.py"   />
-					<File Id="StartPage23" Name="ArchExample.png"   />
-				</Component>
+				<!-- Drawing resource files  -->
+				<Directory Id="DataModDraw" Name="Drawing" FileSource="../../data/Mod/Drawing" >
+					<Directory Id="ModDrawingTemplates" Name="Templates" FileSource="../../data/Mod/Drawing/Templates">
+						<Component Id="CompModDrawingTemplates" Guid="f879f473-3a2a-4808-8fa0-021b4a7db30b" Win64='$(var.Win_64)' KeyPath="yes">
+							<File Id="DrawingTemplateA3" Name="A3_Landscape.svg"  />
+						</Component>
+					</Directory>
+				</Directory>
+				<!-- StartPage resource files  -->
+				<Directory Id="DataModStart" Name="Start" FileSource="../../data/Mod/Start" >
+					<Directory Id="ModStartDataStartPage" Name="StartPage" FileSource="../../data/Mod/Start/StartPage" >
+						<Component Id="CompModStartDataStartPage"  Guid="aa63eb2a-9355-4d6e-872c-e2fdf9c697da" Win64='$(var.Win_64)' KeyPath="yes">
+							<File Id="StartPage2" Name="PartDesign.py"   />
+							<File Id="StartPage3" Name="Mesh.py"   />
+							<File Id="StartPage4" Name="LoadSchenkel.py"   />
+							<File Id="StartPage5" Name="LoadRobotExample.py"   />
+							<File Id="StartPage6" Name="LoadPartDesignExample.py"   />
+							<File Id="StartPage7" Name="LoadDrawingExample.py"   />
+							<!--<File Id="StartPage8" Name="Banner.jpeg"   />-->
+							<File Id="StartPage9" Name="Background.jpg"   />
+							<File Id="StartPage10" Name="Complete.png"   />
+							<File Id="StartPage11" Name="FreeCAD.png"   />
+							<File Id="StartPage12" Name="Mesh.png"   />
+							<File Id="StartPage13" Name="PartDesign.png"   />
+							<File Id="StartPage14" Name="PartDesignExample.png"   />
+							<File Id="StartPage15" Name="web.png"   />
+							<File Id="StartPage17" Name="ArchDesign.png"   />
+							<File Id="StartPage18" Name="ArchDesign.py"   />
+							<File Id="StartPage19" Name="DefaultWorkbench.py"   />
+							<File Id="StartPage20" Name="LoadMRU0.py"   />
+							<File Id="StartPage21" Name="LoadMRU1.py"   />
+							<File Id="StartPage22" Name="LoadMRU2.py"   />
+							<File Id="StartPage23" Name="ArchExample.png"   />
+						</Component>
+					</Directory>
+				</Directory>
 			</Directory>
 		</DirectoryRef>
 	</Fragment>
