--- a/src/WindowsInstaller/LibPack.wxs
+++ b/src/WindowsInstaller/LibPack.wxs
@@ -77,6 +77,7 @@
 				-->
 				<File Id="LibPack13" Name="coin3.dll"  />
 				<!-- <File Id="LibPack20" Name="libumfpack.dll"  /> -->
+				<File Id="LibPack25" Name="_socket.pyd"   />
 				<File Id="LibPack26" Name="python26.dll"   />
 				<File Id="LibPack27" Name="python26.zip"   />
 				<File Id="LibPack29" Name="soqt1.dll"   />
