--- a/src/Mod/Raytracing/Gui/Resources/Raytracing.qrc
+++ b/src/Mod/Raytracing/Gui/Resources/Raytracing.qrc
@@ -5,6 +5,8 @@
         <file>icons/Raytrace_Export.svg</file>
         <file>icons/Raytrace_New.svg</file>
         <file>icons/Raytrace_Part.svg</file>
+        <file>icons/Raytrace_ExportProject.svg</file>
+        <file>icons/Raytrace_NewPartSegment.svg</file>
         <file>translations/Raytracing_af.qm</file>
         <file>translations/Raytracing_de.qm</file>
         <file>translations/Raytracing_es.qm</file>
