--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -51,6 +51,7 @@
         <file>icons/Snap_Center.svg</file>
         <file>icons/Snap_Extension.svg</file>
         <file>icons/Snap_Ortho.svg</file>
+        <file>icons/Snap_Near.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
