0000652: Polish language not available even if translation is available in source

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -36,6 +36,7 @@
         <file>translations/Arch_ru.qm</file>
         <file>translations/Arch_se.qm</file>
         <file>translations/Arch_uk.qm</file>
+        <file>translations/Arch_pl.qm</file>
         <file>translations/Arch_pt.qm</file>
         <file>translations/Arch_hr.qm</file>
         <file>translations/Arch_zh.qm</file>
