--- a/src/Mod/Complete/Gui/Resources/Complete.qrc
+++ b/src/Mod/Complete/Gui/Resources/Complete.qrc
@@ -9,6 +9,7 @@
         <file>translations/Complete_it.qm</file>
         <file>translations/Complete_nl.qm</file>
         <file>translations/Complete_no.qm</file>
+        <file>translations/Complete_pl.qm</file>
         <file>translations/Complete_pt.qm</file>
         <file>translations/Complete_ru.qm</file>
         <file>translations/Complete_se.qm</file>
