--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -68,6 +68,7 @@
         <file>translations/Draft_ru.qm</file>
         <file>translations/Draft_se.qm</file>
         <file>translations/Draft_uk.qm</file>
+        <file>translations/Draft_pl.qm</file>
         <file>translations/Draft_pt.qm</file>
         <file>translations/Draft_hr.qm</file>
         <file>translations/Draft_zh.qm</file>
