--- a/src/Mod/Drawing/Gui/Resources/Drawing.qrc
+++ b/src/Mod/Drawing/Gui/Resources/Drawing.qrc
@@ -25,6 +25,7 @@
         <file>translations/Drawing_it.qm</file>
         <file>translations/Drawing_nl.qm</file>
         <file>translations/Drawing_no.qm</file>
+        <file>translations/Drawing_pl.qm</file>
         <file>translations/Drawing_pt.qm</file>
         <file>translations/Drawing_ru.qm</file>
         <file>translations/Drawing_se.qm</file>
