--- a/src/Mod/Fem/Gui/Resources/Fem.qrc
+++ b/src/Mod/Fem/Gui/Resources/Fem.qrc
@@ -10,6 +10,7 @@
         <file>translations/Fem_it.qm</file>
         <file>translations/Fem_nl.qm</file>
         <file>translations/Fem_no.qm</file>
+        <file>translations/Fem_pl.qm</file>
         <file>translations/Fem_pt.qm</file>
         <file>translations/Fem_ru.qm</file>
         <file>translations/Fem_se.qm</file>
