--- a/src/Mod/Image/Gui/Resources/Image.qrc
+++ b/src/Mod/Image/Gui/Resources/Image.qrc
@@ -10,6 +10,7 @@
         <file>translations/Image_it.qm</file>
         <file>translations/Image_nl.qm</file>
         <file>translations/Image_no.qm</file>
+        <file>translations/Image_pl.qm</file>
         <file>translations/Image_pt.qm</file>
         <file>translations/Image_ru.qm</file>
         <file>translations/Image_se.qm</file>
