--- a/src/Mod/Mesh/Gui/Resources/Mesh.qrc
+++ b/src/Mod/Mesh/Gui/Resources/Mesh.qrc
@@ -12,6 +12,7 @@
         <file>translations/Mesh_it.qm</file>
         <file>translations/Mesh_nl.qm</file>
         <file>translations/Mesh_no.qm</file>
+        <file>translations/Mesh_pl.qm</file>
         <file>translations/Mesh_pt.qm</file>
         <file>translations/Mesh_ru.qm</file>
         <file>translations/Mesh_se.qm</file>
