--- a/src/Mod/MeshPart/Gui/Resources/MeshPart.qrc
+++ b/src/Mod/MeshPart/Gui/Resources/MeshPart.qrc
@@ -10,6 +10,7 @@
         <file>translations/MeshPart_it.qm</file>
         <file>translations/MeshPart_nl.qm</file>
         <file>translations/MeshPart_no.qm</file>
+        <file>translations/MeshPart_pl.qm</file>
         <file>translations/MeshPart_pt.qm</file>
         <file>translations/MeshPart_ru.qm</file>
         <file>translations/MeshPart_se.qm</file>
