--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -36,6 +36,7 @@
         <file>translations/Part_it.qm</file>
         <file>translations/Part_nl.qm</file>
         <file>translations/Part_no.qm</file>
+        <file>translations/Part_pl.qm</file>
         <file>translations/Part_pt.qm</file>
         <file>translations/Part_ru.qm</file>
         <file>translations/Part_se.qm</file>
