--- a/src/Mod/PartDesign/Gui/Resources/PartDesign.qrc
+++ b/src/Mod/PartDesign/Gui/Resources/PartDesign.qrc
@@ -12,6 +12,7 @@
         <file>translations/PartDesign_it.qm</file>
         <file>translations/PartDesign_nl.qm</file>
         <file>translations/PartDesign_no.qm</file>
+        <file>translations/PartDesign_pl.qm</file>
         <file>translations/PartDesign_pt.qm</file>
         <file>translations/PartDesign_ru.qm</file>
         <file>translations/PartDesign_se.qm</file>
