--- a/src/Mod/Points/Gui/Resources/Points.qrc
+++ b/src/Mod/Points/Gui/Resources/Points.qrc
@@ -9,6 +9,7 @@
         <file>translations/Points_it.qm</file>
         <file>translations/Points_nl.qm</file>
         <file>translations/Points_no.qm</file>
+        <file>translations/Points_pl.qm</file>
         <file>translations/Points_pt.qm</file>
         <file>translations/Points_ru.qm</file>
         <file>translations/Points_se.qm</file>
