--- a/src/Mod/Raytracing/Gui/Resources/Raytracing.qrc
+++ b/src/Mod/Raytracing/Gui/Resources/Raytracing.qrc
@@ -16,6 +16,7 @@
         <file>translations/Raytracing_it.qm</file>
         <file>translations/Raytracing_nl.qm</file>
         <file>translations/Raytracing_no.qm</file>
+        <file>translations/Raytracing_pl.qm</file>
         <file>translations/Raytracing_pt.qm</file>
         <file>translations/Raytracing_ru.qm</file>
         <file>translations/Raytracing_se.qm</file>
