--- a/src/Mod/ReverseEngineering/Gui/Resources/ReverseEngineering.qrc
+++ b/src/Mod/ReverseEngineering/Gui/Resources/ReverseEngineering.qrc
@@ -10,6 +10,7 @@
         <file>translations/ReverseEngineering_it.qm</file>
         <file>translations/ReverseEngineering_nl.qm</file>
         <file>translations/ReverseEngineering_no.qm</file>
+        <file>translations/ReverseEngineering_pl.qm</file>
         <file>translations/ReverseEngineering_pt.qm</file>
         <file>translations/ReverseEngineering_ru.qm</file>
         <file>translations/ReverseEngineering_se.qm</file>
