--- a/src/Mod/Robot/Gui/Resources/Robot.qrc
+++ b/src/Mod/Robot/Gui/Resources/Robot.qrc
@@ -22,6 +22,7 @@
         <file>translations/Robot_it.qm</file>
         <file>translations/Robot_nl.qm</file>
         <file>translations/Robot_no.qm</file>
+        <file>translations/Robot_pl.qm</file>
         <file>translations/Robot_pt.qm</file>
         <file>translations/Robot_ru.qm</file>
         <file>translations/Robot_se.qm</file>
