--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -74,6 +74,7 @@
         <file>translations/Sketcher_it.qm</file>
         <file>translations/Sketcher_nl.qm</file>
         <file>translations/Sketcher_no.qm</file>
+        <file>translations/Sketcher_pl.qm</file>
         <file>translations/Sketcher_pt.qm</file>
         <file>translations/Sketcher_ru.qm</file>
         <file>translations/Sketcher_se.qm</file>
