--- a/src/Mod/Start/Gui/Resources/Start.qrc
+++ b/src/Mod/Start/Gui/Resources/Start.qrc
@@ -11,6 +11,7 @@
         <file>translations/StartPage_ru.qm</file>
         <file>translations/StartPage_se.qm</file>
         <file>translations/StartPage_uk.qm</file>
+        <file>translations/StartPage_pl.qm</file>
         <file>translations/StartPage_pt.qm</file>
         <file>translations/StartPage_hr.qm</file>
         <file>translations/StartPage_zh.qm</file>
