--- a/src/Gui/Language/translation.qrc
+++ b/src/Gui/Language/translation.qrc
@@ -9,6 +9,7 @@
         <file>FreeCAD_it.qm</file>
         <file>FreeCAD_nl.qm</file>
         <file>FreeCAD_no.qm</file>
+        <file>FreeCAD_pl.qm</file>
         <file>FreeCAD_pt.qm</file>
         <file>FreeCAD_ru.qm</file>
         <file>FreeCAD_se.qm</file>
