--- a/src/Mod/Test/Gui/Resources/Test.qrc
+++ b/src/Mod/Test/Gui/Resources/Test.qrc
@@ -1,9 +1,21 @@
 <RCC>
     <qresource>
+        <file>translations/Test_af.qm</file>
         <file>translations/Test_de.qm</file>
         <file>translations/Test_es.qm</file>
+        <file>translations/Test_fi.qm</file>
         <file>translations/Test_fr.qm</file>
+        <file>translations/Test_hr.qm</file>
+        <file>translations/Test_hu.qm</file>
         <file>translations/Test_it.qm</file>
+        <file>translations/Test_ja.qm</file>
+        <file>translations/Test_nl.qm</file>
+        <file>translations/Test_no.qm</file>
+        <file>translations/Test_pl.qm</file>
+        <file>translations/Test_pt.qm</file>
+        <file>translations/Test_ru.qm</file>
         <file>translations/Test_se.qm</file>
+        <file>translations/Test_uk.qm</file>
+        <file>translations/Test_zh.qm</file>
     </qresource>
 </RCC>
